Beautify Code and improved testing